--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html {
 
 body {
   font-family: sans-serif;
+  font-size: 16px;
   margin: 20px;
   background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
 }
@@ -29,6 +30,11 @@ img {
 }
 
 h1 {
+  font-size: 250%;
+}
+
+p {
+  font-size: 120%;
 }
 
 .wrapper {
