trying to center in mobile with flexbox

--- a/style.css
+++ b/style.css
@@ -40,6 +40,10 @@ p {
 .wrapper {
   max-width: 1000px;
   margin: 0 auto;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 @media all and (max-width:500px) {
