--- a/style.css
+++ b/style.css
@@ -12,7 +12,8 @@ html {
 body {
   font-family: sans-serif;
   font-size: 16px;
-  margin: 100px;
+  margin-left: 100px;
+  margin-right: 100px;
   background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
 }
 
