--- a/style.css
+++ b/style.css
@@ -12,8 +12,6 @@ html {
 body {
   font-family: sans-serif;
   font-size: 16px;
-  margin-left: 100px;
-  margin-right: 100px;
   background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
 }
 
@@ -23,30 +21,33 @@ body {
 
 #clickdiv {
   text-align: center;
+  font-size: 200%;
+  margin: 1%;
 }
 
 img {
-  width:100%;
+  width:80%;
   border: 5px solid rgb(255, 102, 97);
+  margin-left: 100px;
+  margin-right: 100px;
 }
 
 h1 {
   font-size: 300%;
-}
-
-p {
-  font-size: 200%;
+  margin: 1%;
 }
 
 .wrapper {
   max-width: 1000px;
-  margin: 0 auto;
   height: 100vh;
+  width: 100vw;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 }
 
-@media all and (max-width:500px) {
-
+@media all and (max-width:800px) {
+  .wrapper {
+    justify-content: center;
+  }
 }
