--- a/style.css
+++ b/style.css
@@ -40,14 +40,24 @@ h1 {
 .wrapper {
   max-width: 1000px;
   height: 100vh;
-  width: 100vw;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
 }
 
+.hero {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 @media all and (max-width:800px) {
   .wrapper {
     justify-content: center;
+    align-items: center;
+  }
+  img {
+    margin-left: 0;
+    margin-right: 0;
   }
 }
